[package]
name = "csv-exec"
version = "0.1.0"
authors = ["niladic <git@nil.choron.cc>"]
license = "MIT"
description = "Executes a command for each line of a CSV file, using the columns values."
homepage = "https://github.com/niladic/csv-exec"
documentation = "https://github.com/niladic/csv-exec"
repository = "https://github.com/niladic/csv-exec"
readme = "README.md"
keywords = ["csv", "tsv", "command", "shell", "scripts"]
categories = ["command-line-utilities", "text-processing"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "2.33"
csv = "1.1"
regex = "1.3"
shell-words = "0.1"
